glyph-cell-macros/tests/ui/old_bitmap_font_removed_fail.rs
use glyph_cell::bitmap_font;

fn main() {
    let _ = bitmap_font;
}
